2005-05-14  Pino Toscano <toscano.pino@tiscali.it>

	* Created a new system to select - in normal mode - one object
	among some: using Shift (or Control) + LMB the user can select the
	object he/she desire through a popup menu. This new system is
	applyed also to to mouse hover/left click in construct mode, to
	select one object if we have more than one valid object. This,
	plus a search among the object under the mouse, allow the fixing
	of bug #99870.

	* Added a "tip of day" to inform the user of the possibility to
	select any object from an object stack under the cursor.

2005-05-07  Pino Toscano <toscano.pino@tiscali.it>

	* Using three standard action in our popup menu instead of
	creating new actions "from scratch". Removing the Toggle
	fullscreen action created by hand, fixes also an ugly bug that
	happened when choosing Toggle fullscreen from the popup to exit
	from fullscreen.

2005-05-06  Pino Toscano <toscano.pino@tiscali.it>

	* Made Kig standard names for its icons, so artists can theme them
	in their icon themes. Some files needed obviously changes.

2005-04-30  Pino Toscano <toscano.pino@tiscali.it>

	* When selecting a custom color for one object, put the old object
	color as selected color in the Color dialog.

2005-04-28  Pino Toscano <toscano.pino@tiscali.it>

	* Other work on Cabri filter: can read styles and translations.

2005-04-27  Pino Toscano <toscano.pino@tiscali.it>

	* Some work also on Cabri filter: fixed a color, and imported four
	objects.

2005-04-25  Pino Toscano <toscano.pino@tiscali.it>

	* Almost rewritten a core part of the KSeg import filter: some
	object are handled in a more correct way than before (thus less
	crashes, but some crashes still occurs with locuses). As a result,
	some objects can be imported correctly now.

2005-04-20  Pino Toscano <toscano.pino@tiscali.it>

	* Give to the KSeg filter the ability to import names (called
	labels) of objects. This is not so perfect, because we need to