@@ -1,3 +1,8 @@
+2005-05-15  Danny Allen <dannya40uk@yahoo.co.uk>
+
+	* Added my new action icons for Kig, with SVG sources, changed 
+	icons to "hi*" naming conventions.
+
 2005-05-14  Pino Toscano <toscano.pino@tiscali.it>
 
 	* Created a new system to select - in normal mode - one object
